--- a/WebContent/views/training.view.html
+++ b/WebContent/views/training.view.html
@@ -221,7 +221,7 @@
 	                     </div>
 					</div>
                                  <div ng-show="model.createSuccessful" class="alert alert-success" role="alert">Training created successfully.</div>
-                                 <div ng-show="model.createFailed" class="alert alert-danger" role="alert">Failed to update training. Please check the information entered above.</div>
+                                 <div ng-show="model.createFailed" class="alert alert-danger" role="alert">Failed to create training</div>
 					</div>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                 <div class="modal-body">
                    <div class="form-horizontal" ng-form name="trainingQuestionsAddForm">
                                 <div class="form-group required">
-                                    <label for="inputName2" class="col-sm-3 control-label">Question Category:</label>
+                                    <label for="inputName2" class="col-sm-4 control-label">Question Category:</label>
                                     <div class="col-sm-7">
                                     	<ui-select ng-model="model.questionCategories.selected" theme="select2" style="min-width: 300px;" title="Choose a question category" ng-change="model.populateQuestions($select.selected)">
 										    <ui-select-match placeholder="Select a question category in the list or search it...">{{$select.selected.questionCategoryName}}</ui-select-match>
@@ -252,7 +252,7 @@
                                 </div>
                                 
                                 <div class="form-group required">
-                                    <label for="inputName2" class="col-sm-3 control-label">Question:</label>
+                                    <label for="inputName2" class="col-sm-4 control-label">Question:</label>
                                     <div class="col-sm-7">
                                         <ui-select ng-model="model.questionsDropDown.selected" theme="select2" style="min-width: 300px;" title="Choose a question" ng-change="model.checkDuplicate()">
 										    <ui-select-match placeholder="Select a question from above category in the list...">{{$select.selected.questionName}}</ui-select-match>
@@ -296,7 +296,7 @@
                 <div class="modal-body">
                    <div class="form-horizontal" ng-form name="trainingQuestionsAddForm">
                                 <div class="form-group required">
-                                    <label for="inputName2" class="col-sm-3 control-label">Image Category:</label>
+                                    <label for="inputName2" class="col-sm-4 control-label">Image Category:</label>
                                     <div class="col-sm-7">
                                     	<ui-select ng-model="model.imageCategories.selected" theme="select2" style="min-width: 300px;" title="Choose a question category">
 										    <ui-select-match placeholder="Select an image category in the list or search it...">{{$select.selected.imageCategoryName}}</ui-select-match>
@@ -308,7 +308,7 @@
                                 </div>
                                 
                                 <div class="form-group required">
-                                    <label for="inputName2" class="col-sm-3 control-label">Image Type:</label>
+                                    <label for="inputName2" class="col-sm-4 control-label">Image Type:</label>
                                     <div class="col-sm-7">
                                         <ui-select ng-model="model.imageTypes.selected" theme="select2" style="min-width: 300px;" title="Choose a question">
 										    <ui-select-match placeholder="Select an image type in the list or search...">{{$select.selected.fieldValue}}</ui-select-match>
@@ -319,13 +319,13 @@
                                     </div>
                                 </div>
                                 <div class="form-group required">
-		                            <label for="inputName2" class="col-sm-3 control-label">Duration:</label>
+		                            <label for="inputName2" class="col-sm-4 control-label">Duration:</label>
 		                            <div class="col-sm-7">
 		                                <input type="number" class="form-control" id="inputName2" placeholder="Duration" ng-model="model.addImageDuration">
 		                            </div>
 		                        </div>
 		                        <div class="form-group required">
-		                            <label for="inputName2" class="col-sm-3 control-label">Image Count:</label>
+		                            <label for="inputName2" class="col-sm-4 control-label">Image Count:</label>
 		                            <div class="col-sm-7">
 		                                <input type="number" class="form-control" id="inputName2" placeholder="Image Count" ng-model="model.addImageCount">
 		                            </div>
