--- a/WebContent/views/adminProfile.view.html
+++ b/WebContent/views/adminProfile.view.html
@@ -1,19 +1,19 @@
 <h1 class="page-header">User Profile</h1>
 
 <div class="form-horizontal">
-    <div class="form-group">
+    <div class="form-group required">
         <label for="inputName2" class="col-sm-2 control-label">First Name:</label>
         <div class="col-sm-7">
             <input type="text" class="form-control" id="inputName2" placeholder="First Name" ng-model="model.firstName">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group required">
         <label for="inputName3" class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-7">
             <input type="text" class="form-control" id="inputName3" placeholder="Last Name" ng-model="model.lastName">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group required">
         <label for="inputEmail3" class="col-sm-2 control-label">Email:</label>
         <div class="col-sm-7">
             <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="model.email">
