--- a/WebContent/views/imageManagement.view.html
+++ b/WebContent/views/imageManagement.view.html
@@ -245,7 +245,7 @@
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Image Category:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="states" class="form-control" id="inputEmail3" placeholder="Category of the image" ng-model="model.imageCategory" ng-options='ic.imageCategoryId as ic.imageCategoryName for ic in model.imageCategoryList' required="required">
+                                        <select name="states" class="form-control" id="inputEmail3" placeholder="Category of the image" ng-model="imageCategory" ng-options='ic.imageCategoryId as ic.imageCategoryName for ic in model.imageCategoryList' required="required">
                                         <option value="">Select Category</option>
                                         </select>
                                     </div>
@@ -253,7 +253,7 @@
                                   <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Intensity:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="Intensity" class="form-control" id="inputEmail3" placeholder="Intensity" ng-model="model.imageIntensity" required="required">
+                                        <select name="Intensity" class="form-control" id="inputEmail3" placeholder="Intensity" ng-model="imageIntensity" required="required">
                                     	<option value="">Select Intensity</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -266,7 +266,7 @@
                                        <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Image Type:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="imageType" class="form-control" id="inputEmail3" placeholder="Image Type" ng-model="model.createI.imageType" ng-options='ic.fieldId as ic.fieldValue for ic in model.imageTypeList' required="required">
+                                        <select name="imageType" class="form-control" id="inputEmail3" placeholder="Image Type" ng-model="imageType" ng-options='ic.fieldId as ic.fieldValue for ic in model.imageTypeList' required="required">
                                         <option value="">Select Type</option>
                                         <option value=""></option>
                                           
@@ -283,7 +283,7 @@
 
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-7">
-                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.save(model.createI)">Create</button>
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.save()">Create</button>
                                     </div>
                                 </div>
                                 <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
