--- a/WebContent/views/imageManagement.view.html
+++ b/WebContent/views/imageManagement.view.html
@@ -21,11 +21,11 @@
 		                  <div class="tabbable-panel" ng-show="model.isSet('imageCatergories')">
 		                	<div class="tabbable-line">
 		                    <ul class="nav nav-tabs">
-		                    	<li ng-class="{active:model.isSet('SearchImageCatergories')}">
+		                    	<li ng-class="{active:model.isSetSubTab('SearchImageCatergories')}">
 		                            <a href="" ng-click="model.setSubTab('SearchImageCatergories')">
 		                                Search </a>
 		                        </li>
-		                        <li ng-class="{active:model.isSet('createImageCategories')}">
+		                        <li ng-class="{active:model.isSetSubTab('createImageCategories')}">
 		                            <a href="" ng-click="model.setSubTab('createImageCategories')">
 		                                Create </a>
 		                        </li>
@@ -121,11 +121,11 @@
                 	                  <div class="tabbable-panel" ng-show="model.isSet('images')">
 		                	<div class="tabbable-line">
 		                    <ul class="nav nav-tabs">
-		                    	<li ng-class="{active:model.isSet('searchImages')}">
+		                    	<li ng-class="{active:model.isSetSubTab('searchImages')}">
 		                            <a href="" ng-click="model.setSubTab('searchImages')">
 		                                Search </a>
 		                        </li>
-		                        <li ng-class="{active:model.isSet('createImages')}">
+		                        <li ng-class="{active:model.isSetSubTab('createImages')}">
 		                            <a href="" ng-click="model.setSubTab('createImages')">
 		                                Create </a>
 		                        </li>
@@ -134,21 +134,21 @@
                         <div class="tab-pane active" id="tab_default_1" ng-show="model.isSetSubTab('searchImages')">
                             <div class="form-horizontal">
                                 <div class="form-group">
-                                    <label for="inputName2" class="col-sm-2 control-label">image Name:</label>
+                                    <label for="inputName2" class="col-sm-2 control-label">Image Name:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputName2" placeholder="Name of image" ng-model="model.searchLoc.name">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Name of image" ng-model="model.searchI.imageName">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-2 control-label">Description:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the image" ng-model="model.searchLoc.description">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the image" ng-model="model.searchI.imageDescription">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">image Category:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="states" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchLoc.state" required="required">
+                                        <select name="states" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchI.imageCategoryId" ng-options='ic.imageCategoryId as ic.imageCategoryName for ic in model.imageCategoryList' required="required">
                                         <option value="">Select Category</option>
                                         </select>
                                     </div>
@@ -156,7 +156,7 @@
                                     <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Intensity:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="Intensity" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchLoc.state" required="required">
+                                        <select name="Intensity" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchI.imageIntensity" required="required">
                                         
                                         <option value="">1</option>
                                         <option value="">2</option>
@@ -169,7 +169,7 @@
                                        <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Image Type:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="imageType" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchLoc.state" required="required">
+                                        <select name="imageType" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchI.imageTypeId" required="required">
                                         <option value="">Select Category</option>
                                         <option value="">Positive</option>
                                           <option value="">Negative</option>
@@ -177,48 +177,25 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                  <label for="inputEmail3" class="col-sm-2 control-label">Select Image :</label>
-                                  <div class="col-sm-7"> 
-                                <div> <input type='file' onchange="readURL(this);" /></div>
-                                </div>
-                               </div>
+                               
 
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-7">
-                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.search(model.search)">Search</button>
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.searchImages(model.searchI)">Search</button>
                                     </div>
                                 </div>
                                 <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
                                  <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
                             </div>
-							<div>
+							<div ng-if="model.isSearchImagesClicked">
            		<h4>Search Results</h4>
-           		<div class="table-responsive" id="formtable">
-    <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th> image Name</th>
-            <th> Description</th>
-            <th> image Category</th>
-            <th> </th>
-        </tr>
-     
-        </thead>
-        <tbody>
-        <tr>
-            <td><a href=""> Test image </a></td>
-            <td> Testing </td>
-            <td> Testing </td>
-           
-            <td>
-                <a href=""><span class="glyphicon glyphicon-pencil incrsize" data-toggle="modal"
-                                                 data-target="#myModal"></span></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+           		<div class="col-lg-3 col-md-4 col-xs-6 thumb" ng-repeat="img in model.imageSearchResults">
+                <a class="thumbnail" href="">
+                    <img class="img-responsive" ng-src="{{img.imagePath}}" alt="Image not available">
+                    {{img.imageName}}
+                </a>
+                
+            </div>
            </div> 
 
                         </div>
@@ -245,7 +222,7 @@
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Image Category:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="states" class="form-control" id="inputEmail3" placeholder="Category of the image" ng-model="imageCategory" ng-options='ic.imageCategoryId as ic.imageCategoryName for ic in model.imageCategoryList' required="required">
+                                        <select name="states" class="form-control" id="inputEmail3" placeholder="Category of the image" ng-model="imageCategoryId" ng-options='ic.imageCategoryId as ic.imageCategoryName for ic in model.imageCategoryList' required="required">
                                         <option value="">Select Category</option>
                                         </select>
                                     </div>
@@ -266,7 +243,7 @@
                                        <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Image Type:</label>
                                     <div class="col-sm-7">                                     
-                                        <select name="imageType" class="form-control" id="inputEmail3" placeholder="Image Type" ng-model="imageType" ng-options='ic.fieldId as ic.fieldValue for ic in model.imageTypeList' required="required">
+                                        <select name="imageType" class="form-control" id="inputEmail3" placeholder="Image Type" ng-model="imageTypeId" ng-options='ic.fieldId as ic.fieldValue for ic in model.imageTypeList' required="required">
                                         <option value="">Select Type</option>
                                         <option value=""></option>
                                           
@@ -276,7 +253,7 @@
                                 <div class="form-group">
                                   <label for="inputEmail3" class="col-sm-2 control-label">Select Image :</label>
                                   <div class="col-sm-7"> 
-                                <div> <input type='file' file-upload multiple/></div>
+                                <div> <input type='file' file-upload/></div>
                                 </div>
                                </div>
                
