--- a/WebContent/views/navigation.view.html
+++ b/WebContent/views/navigation.view.html
@@ -53,7 +53,7 @@
                 <a href="#/training"><i class="fa fa-mobile"></i> Trainings </a>
             </li>
             <li ng-class="{'active' : model.$location.url() =='/report'}">
-                <a href=""><i class="fa fa-bar-chart"></i> Reports </a>
+                <a href="#/report"><i class="fa fa-bar-chart"></i> Reports </a>
             </li>
            <!--  <li ng-class="{'active' : model.$location.url() =='/localAdmin'}">
                 <a href=""><i class="fa fa-user"></i> Local Admins </a>
