Cleaning up search for all pages. AND on fields now works

--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -78,7 +78,7 @@ Licensed under MIT
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Zipcode:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Zipcode" ng-model="model.searchLoc.zip">
+                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Zipcode" ng-model="model.searchLoc.zipcode">
                                     </div>
                                 </div>
 
