--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -39,6 +39,12 @@ Licensed under MIT
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <label for="inputName2" class="col-sm-2 control-label">Location Code:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Enter the location code" ng-model="model.searchLoc.locationCode">
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <label for="inputName3" class="col-sm-2 control-label">Description:</label>
                                     <div class="col-sm-7">
                                         <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.searchLoc.description"></textarea>
