--- a/WebContent/views/adminProfile.view.html
+++ b/WebContent/views/adminProfile.view.html
@@ -20,14 +20,14 @@
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group required">
         <label for="inputEmail3" class="col-sm-2 control-label">New Password:</label>
         <div class="col-sm-7">
             <input type="password" class="form-control" id="inputEmail3" placeholder="Enter new password" ng-model="model.password">
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group required">
         <label for="inputEmail3" class="col-sm-2 control-label">Retype Password:</label>
         <div class="col-sm-7">
             <input type="password" class="form-control" id="inputEmail3" placeholder="Retype new password" ng-model="model.retypePassword">
