--- a/WebContent/views/questionManagement.view.html
+++ b/WebContent/views/questionManagement.view.html
@@ -81,7 +81,9 @@
         <thead>
         <tr>
             <th> Category Name</th>
-            <th> Description</th>
+            <th> Response Type </th>
+            <th> Start Label</th>
+            <th> End Label</th>
             
             <th> </th>
         </tr>
@@ -90,8 +92,11 @@
         <tbody>
         <tr ng-repeat = "qc in model.questionCategorySearchResults">
             <td><a href=""><span data-toggle="modal"
-                                                 data-target="#myModalForQuestionCategoryDetails" ng-click="model.selectQuestionCategoryDetails($index)"> {{qc.questionCategoryName}} </span></a></td>
-            <td> {{qc.questionCategoryDescription}} </td>
+                                   
+                                               data-target="#myModalForQuestionCategoryDetails" ng-click="model.selectQuestionCategoryDetails($index)"> {{qc.questionCategoryName}} </span></a></td>
+            <td> {{qc.responseType}} </td>
+            <td> {{qc.startLabel}} </td>
+            <td> {{qc.endLabel}} </td>
             
            
             <td>
@@ -186,6 +191,14 @@
                                         <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the question" ng-model="model.searchQ.questionDescription"></textarea>
                                     </div>
                                 </div>
+                                <div class="form-group required">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Question Category:</label>
+                                    <div class="col-sm-7">                                     
+                                        <select name="states" class="form-control" id="inputEmail3" placeholder="" ng-options='qc.questionCategoryId as qc.questionCategoryName for qc in model.questionCategoryList' ng-model="model.searchQ.questionCategoryId" required="required">
+                                        <option value="">Select Category</option>
+                                        </select>
+                                    </div>
+                                </div>
                       
 
                                 <div class="form-group">
@@ -203,7 +216,7 @@
         <thead>
         <tr>
             <th> Question Name</th>
-            <th> Description</th>
+            <th> Category</th>
       
             <th> </th>
         </tr>
@@ -213,7 +226,7 @@
         <tr ng-repeat = "qc in model.questionSearchResults">
             <td><a href=""> <span data-toggle="modal"
                                                  data-target="#myModalForQuestionDetails" ng-click="model.selectQuestionDetails($index)">{{qc.questionName}} </span></a></td>
-            <td> {{qc.questionDescription}} </td>
+            <td> {{qc.questionCategoryName}} </td>
             
            
             <td>
