--- a/WebContent/views/questionManagement.view.html
+++ b/WebContent/views/questionManagement.view.html
@@ -111,7 +111,7 @@
 
                         </div>
                         <div class="tab-pane active" id="tab_default_2" ng-show="model.isSetSubTab('createQuestionCategories')">
-                            <div class="form-horizontal" ng-form name="locationCreateForm">
+                            <div class="form-horizontal" ng-form name="model.locationCreateForm2">    
                                
                                 <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Category Name:</label>
@@ -241,7 +241,7 @@
 
                         </div>
                         <div class="tab-pane active" id="tab_default_2" ng-show="model.isSetSubTab('createQuestions')">
-                            <div class="form-horizontal" ng-form name="locationCreateForm">
+                            <div class="form-horizontal" ng-form name="model.locationCreateForm">
                                
                                 <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Question Name:</label>
